Feat: add preview share link
